--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,19 @@
-#root {
+/*#root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}*/
+.container {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+#root
+{
+	width:100%
 }
 
 .logo {
@@ -39,4 +50,9 @@
 
 .read-the-docs {
   color: #888;
+}
+
+nav a
+{
+  margin-left: 10px;
 }
