--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,10 @@
   text-align: center;
 }*/
 .container {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  /*max-width: 1280px;
+  margin: 0 auto;*/
+  /*padding: 2rem;
+  text-align: center;*/
 }
 
 #root
@@ -45,7 +45,7 @@
 }
 
 .card {
-  padding: 2em;
+  /*padding: 2em;*/
 }
 
 .read-the-docs {
